# liquidctl-gtk

./: .gitignore  README.md  install.sh  pyproject.toml
data/: io.github.weversonl.LiquidctlGTK.desktop
liquidctl_gui/: __main__.py  _tray_helper.py  app.py  appinfo.py  i18n.py  tray.py
liquidctl_gui/backend/: autostart.py  config_store.py  controller.py  curve_engine.py  device_manager.py  sleep_monitor.py  system_sensors.py
liquidctl_gui/ui/: page_curves.py  page_dashboard.py  page_lighting.py  page_profiles.py  page_settings.py  sidebar.py  style.py  window.py
po/: POTFILES.in  pt_BR.po
